tests/integration/tests/orm/ui/fail/manager_invalid_path.stderr
error: parse_args_with failed: expected identifier
 --> tests/orm/ui/fail/manager_invalid_path.rs:8:1
  |
8 | #[model(app_label = "test", table_name = "users", manager = 123)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
